fix(gameview): adjust screen spacings in gameview botton

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -987,4 +987,8 @@ iframe{
     padding: 0 50px 50px 50px;
 }
 
-
+.desktopIsloggedIn {
+    position: fixed;
+    margin-top: 50px !important;
+    height: calc(100% - 170px);
+}
